deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app: ${APPLICATION_NAME}
    spec:
      containers:
      - name: ${APPLICATION_NAME}
        image: ${CONTAINER_REGISTRY}/${APPLICATION_NAME}
        imagePullPolicy: Always # Pull new image on restart
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-credentials # Credentials to pull image from registry
